src/test/deca/syntax/valid/list_expr/test_list_expr_with_comma.deca
// Description:
//    tests de programme syntaxiquement corrects
//
// Resultats:
//    Hello World!
//    
//
// Historique:
//    cree le 01/01/2024

{
    println("Hello World", "!");
}
